# woodworker123d

./: .gitignore  README.md  materials.toml  pyproject.toml  wooden_birdhouse.py
config/: materials.toml  wood_plates.toml
examples/: birdhouse_1.py
test/: test_board.py  test_calcualte.py  test_common.py  test_material.py  test_materialslist.py
woodworker123d/: __init__.py  __main__.py  boards.py  calculation.py  common.py  material.py  planks.py  tools.py  wooden_birdhouse.py
